<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photo"
                android:layout_width="130dp"
                android:layout_height="130dp"
                tools:src="@android:color/darker_gray" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/scientistname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/nama"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/scientistbirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ttl"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>
                <TextView
                    android:id="@+id/scientistdied"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tahun_kematian"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>
                <TextView
                    android:id="@+id/expert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bidang_ahli"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <TextView
            android:id="@+id/karya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/karya"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>


    </LinearLayout>



</ScrollView>